tests/spec-examples/0067.wgsl.snap
error: Expected expression, found 'for'.

  for (var i: i32 = 0; i < 5; i++ ) {
  ~~~
error: Expected statement, found 'for'.

  for (var i: i32 = 0; i < 5; i++ ) {
  ~~~
